# AdvancedProgrammingTask2

./: CMakeLists.txt  Client.cpp  Client.h  Comms.h  Exception.cpp  Exception.h  Exceptions.h  README.md  Server.cpp  Server.h  Toggle.h  main.cpp
Client/: CMakeLists.txt  Client.cpp  Client.h  Comms.cpp  Comms.h  Exception.h  Server.cpp  Server.h  Toggle.h  main.cpp
Server/: CMakeLists.txt  Client.cpp  Client.h  Comms.cpp  Comms.h  Exception.h  README.md  Server.cpp  Server.h  Toggle.h  main.cpp
